--- a/about.html
+++ b/about.html
@@ -61,17 +61,17 @@
                     </h1>
                 </li>
                 <li class="global-header__item">
-                    <a href="./about.html" class="global-header__link">
+                    <a href="./about" class="global-header__link">
                         About
                     </a>
                 </li>
                 <li class="global-header__item">
-                    <a href="./works.html" class="global-header__link">
+                    <a href="./works" class="global-header__link">
                         Works
                     </a>
                 </li>
                 <li class="global-header__item">
-                    <a href="./contact.html" class="global-header__link">
+                    <a href="./contact" class="global-header__link">
                         Contact
                     </a>
                 </li>
