--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
                     </h1>
                 </li>
                 <li class="index-nav__item">
-                    <a href="./about.html" class="index-nav__link">
+                    <a href="./about" class="index-nav__link">
                         About
                     </a>
                 </li>
                 <li class="index-nav__item">
-                    <a href="./works.html" class="index-nav__link">
+                    <a href="./works" class="index-nav__link">
                         Works
                     </a>
                 </li>
                 <li class="index-nav__item">
-                    <a href="./contact.html" class="index-nav__link">
+                    <a href="./contact" class="index-nav__link">
                         Contact
                     </a>
                 </li>
