--- a/about.html
+++ b/about.html
@@ -90,10 +90,10 @@
                     「 Ciel 」と申します。
                 </p>
                 <p class="common-section__paragraph">
-                    一部サービスでは「 Cassiopeia 」。読みは「シエル」または「カシオペイア」。a.k.a. Yuduki Sorane.
+                    「 Ciel_Dev 」や「 Ciel-Dev 」のときも。読みは「シエル」。a.k.a. Yuduki Sorane.
                 </p>
                 <p class="common-section__paragraph">
-                    高校生。Web エンジニア。Androidアプリ開発者。Xジェンダー無性, アロマンティック/アセクシュアル。
+                    高校生。Web エンジニア。Androidアプリ開発者。
                 </p>
                 <p class="common-section__paragraph">
                     座右の銘は「自分を救うは自分のみ、自分を決めるは自分のみ」「ただの私による、ただ私だけの人生」。
@@ -110,7 +110,7 @@
                 <ul class="link-list">
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://twitter.com/cielcassiopeia" class="link-list__link link-list__link--twitter">
+                            <a href="https://twitter.com/Dev_Ciel" class="link-list__link link-list__link--twitter">
                                 Twitter
                             </a>
                         </div>
@@ -131,21 +131,21 @@
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://www.instagram.com/ciel_cassiopeia" class="link-list__link link-list__link--instagram">
+                            <a href="https://www.instagram.com/ciel_dev" class="link-list__link link-list__link--instagram">
                                 Instagram
                             </a>
                         </div>
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://github.com/ciel-cassiopeia" class="link-list__link link-list__link--github">
+                            <a href="https://github.com/CielDev1234" class="link-list__link link-list__link--github">
                                 GitHub
                             </a>
                         </div>
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://soundcloud.com/ciel-cassiopeia" class="link-list__link link-list__link--qiita">
+                            <a href="https://soundcloud.com/cieldev" class="link-list__link link-list__link--qiita">
                                 SoundCloud
                             </a>
                         </div>
@@ -166,14 +166,14 @@
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://reddit.com/u/ciel-cassiopeia" class="link-list__link link-list__link--reddit">
+                            <a href="https://reddit.com/u/ciel-dev" class="link-list__link link-list__link--reddit">
                                 Redditユーザーページ
                             </a>
                         </div>
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://www.geartics.com/cassiopeia" class="link-list__link link-list__link--geartics">
+                            <a href="https://www.geartics.com/ciel_dev" class="link-list__link link-list__link--geartics">
                                 Geartics
                             </a>
                         </div>
@@ -283,7 +283,7 @@
         </section>
     </main>
     <footer class="global-footer">
-        © 2021 Ciel (Cassiopeia)
+        © 2022 Ciel
     </footer>
 </body>
 
