--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
         </section>
     </main>
     <footer class="global-footer">
-        © 2021 Ciel (Cassiopeia)
+        © 2022 Ciel
     </footer>
 </body>
 
