--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </nav>
     </main>
     <footer class="global-footer">
-        © 2021 Ciel (Cassiopeia)
+        © 2022 Ciel
     </footer>
 </body>
 
