--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
     <meta property="og:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@cielcassiopeia" />
-    <meta name="twitter:creator" content="@cielcassiopeia" />
+    <meta name="twitter:site" content="@Chr0noStqs1a" />
+    <meta name="twitter:creator" content="@Chr0noStqs1a" />
     <meta name="twitter:title" content="About - Ciel" />
     <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「Cassiopeia」のときも。簡単なプロフィールと各種リンク, 経歴。" />
     <meta name="twitter:image" content="https://cieldev.net/static/icons/icon.png" />
@@ -90,7 +90,7 @@
                     「 Ciel 」と申します。
                 </p>
                 <p class="common-section__paragraph">
-                    「 Ciel_Dev 」や「 Ciel-Dev 」のときも。読みは「シエル」。a.k.a. Yuduki Sorane.
+                    「 Chr0noStqs1a 」としても活動。読みは「シエル」もしくは「クロノスタシア」。a.k.a. Yuduki Sorane.
                 </p>
                 <p class="common-section__paragraph">
                     高校生。Web エンジニア。Androidアプリ開発者。
@@ -110,14 +110,14 @@
                 <ul class="link-list">
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://twitter.com/Dev_Ciel" class="link-list__link link-list__link--twitter">
+                            <a href="https://twitter.com/chr0nostqs1a" class="link-list__link link-list__link--twitter">
                                 Twitter
                             </a>
                         </div>
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://www.youtube.com/channel/UCHX1uVOAop6G-1ZtI4_qrtg" class="link-list__link link-list__link--youtube">
+                            <a href="https://links.cieldev.net/youtube" class="link-list__link link-list__link--youtube">
                                 YouTube
                             </a>
                         </div>
@@ -131,7 +131,7 @@
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://www.instagram.com/ciel_dev" class="link-list__link link-list__link--instagram">
+                            <a href="https://www.instagram.com/chr0nostqs1a" class="link-list__link link-list__link--instagram">
                                 Instagram
                             </a>
                         </div>
@@ -145,14 +145,14 @@
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://soundcloud.com/cieldev" class="link-list__link link-list__link--qiita">
+                            <a href="https://soundcloud.com/Chr0noStqs1a" class="link-list__link link-list__link--qiita">
                                 SoundCloud
                             </a>
                         </div>
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://twitch.tv/cieldev" class="link-list__link link-list__link--twitch">
+                            <a href="https://twitch.tv/Chr0noStqs1a" class="link-list__link link-list__link--twitch">
                                 Twitch
                             </a>
                         </div>
@@ -173,8 +173,22 @@
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://www.geartics.com/ciel_dev" class="link-list__link link-list__link--geartics">
-                                Geartics
+                            <a href="https://note.com/Chr0noStqs1a" class="link-list__link link-list__link--note">
+                                note
+                            </a>
+                        </div>
+                    </li>
+                    <li class="link-list__item">
+                        <div class="link-list__item-innner">
+                            <a href="https://links.cieldev.net/alphapolis" class="link-list__link link-list__link--alphapolis">
+                                Alphapolis
+                            </a>
+                        </div>
+                    </li>
+                    <li class="link-list__item">
+                        <div class="link-list__item-innner">
+                            <a href="https://ja.wikipedia.org/wiki/User:Chr0noStqs1a" class="link-list__link link-list__link--wkipedia">
+                                wikipedia利用者ページ
                             </a>
                         </div>
                     </li>
