--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About - Ciel</title>
-    <meta name="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「Cassiopeia」のときも。簡単なプロフィールと各種リンク, 経歴。" />
+    <meta name="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「Chr0noStqs1a」のときも。簡単なプロフィールと各種リンク, 経歴。" />
     <link rel="canonical" href="https://cieldev.net/about.html" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="static/icons/apple-touch-icon.png" />
@@ -21,21 +21,21 @@
 
 
     <meta itemprop="name" content="About - Ciel" />
-    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「Cassiopeia」のときも。簡単なプロフィールと各種リンク, 経歴。" />
+    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。簡単なプロフィールと各種リンク, 経歴。" />
     <meta itemprop="image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta property="og:url" content="https://cieldev.net/about.html" />
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Ciel" />
     <meta property="og:title" content="About - Ciel" />
-    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「Cassiopeia」のときも。簡単なプロフィールと各種リンク, 経歴。" />
+    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。簡単なプロフィールと各種リンク, 経歴。" />
     <meta property="og:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@Chr0noStqs1a" />
-    <meta name="twitter:creator" content="@Chr0noStqs1a" />
+    <meta name="twitter:site" content="@Ciel__dev" />
+    <meta name="twitter:creator" content="@Ciel__dev" />
     <meta name="twitter:title" content="About - Ciel" />
-    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「Cassiopeia」のときも。簡単なプロフィールと各種リンク, 経歴。" />
+    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。簡単なプロフィールと各種リンク, 経歴。" />
     <meta name="twitter:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -110,7 +110,7 @@
                 <ul class="link-list">
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://twitter.com/chr0nostqs1a" class="link-list__link link-list__link--twitter">
+                            <a href="https://twitter.com/ciel__dev" class="link-list__link link-list__link--twitter">
                                 Twitter
                             </a>
                         </div>
@@ -131,28 +131,28 @@
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://www.instagram.com/chr0nostqs1a" class="link-list__link link-list__link--instagram">
+                            <a href="https://www.instagram.com/cieldev" class="link-list__link link-list__link--instagram">
                                 Instagram
                             </a>
                         </div>
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://github.com/CielDev1234" class="link-list__link link-list__link--github">
+                            <a href="https://github.com/cieldev" class="link-list__link link-list__link--github">
                                 GitHub
                             </a>
                         </div>
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://soundcloud.com/Chr0noStqs1a" class="link-list__link link-list__link--qiita">
+                            <a href="https://soundcloud.com/cieldev" class="link-list__link link-list__link--qiita">
                                 SoundCloud
                             </a>
                         </div>
                     </li>
                     <li class="link-list__item">
                         <div class="link-list__item-innner">
-                            <a href="https://twitch.tv/Chr0noStqs1a" class="link-list__link link-list__link--twitch">
+                            <a href="https://twitch.tv/cieldev" class="link-list__link link-list__link--twitch">
                                 Twitch
                             </a>
                         </div>
@@ -161,34 +161,6 @@
                         <div class="link-list__item-innner">
                             <a href="https://osu.ppy.sh/u/KoiUta" class="link-list__link link-list__link--osu">
                                 osu!ユーザーページ
-                            </a>
-                        </div>
-                    </li>
-                    <li class="link-list__item">
-                        <div class="link-list__item-innner">
-                            <a href="https://reddit.com/u/ciel-dev" class="link-list__link link-list__link--reddit">
-                                Redditユーザーページ
-                            </a>
-                        </div>
-                    </li>
-                    <li class="link-list__item">
-                        <div class="link-list__item-innner">
-                            <a href="https://note.com/Chr0noStqs1a" class="link-list__link link-list__link--note">
-                                note
-                            </a>
-                        </div>
-                    </li>
-                    <li class="link-list__item">
-                        <div class="link-list__item-innner">
-                            <a href="https://links.cieldev.net/alphapolis" class="link-list__link link-list__link--alphapolis">
-                                Alphapolis
-                            </a>
-                        </div>
-                    </li>
-                    <li class="link-list__item">
-                        <div class="link-list__item-innner">
-                            <a href="https://ja.wikipedia.org/wiki/User:Chr0noStqs1a" class="link-list__link link-list__link--wkipedia">
-                                wikipedia利用者ページ
                             </a>
                         </div>
                     </li>
@@ -209,12 +181,12 @@
                     <dd class="bio-list__year-body">
                         <dl class="bio-list__year-list">
                             <dt class="bio-list__month">
-                                1
+                                2
                             </dt>
                             <dd class="bio-list__month-body">
                                 <ul class="bio-list__item-list">
                                     <li class="bio-list__item">
-                                        生まれる
+                                        北海道にて生まれる
                                     </li>
                                 </ul>
                             </dd>
