--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
 
 
     <meta itemprop="name" content="Ciel" />
-    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「Cassiopeia」のときも。高校生。Webエンジニア。Androidアプリケーション開発者。" />
+    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。高校生。Webエンジニア。Androidアプリケーション開発者。" />
     <meta itemprop="image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta property="og:url" content="https://cieldev.net" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Ciel" />
     <meta property="og:title" content="Ciel" />
-    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「Cassiopeia」のときも。高校生。Webエンジニア。Androidアプリケーション開発者。" />
+    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。高校生。Webエンジニア。Androidアプリケーション開発者。" />
     <meta property="og:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@ciel_cassiopeia />
-    <meta name="twitter:creator" content="@ciel_cassiopeia />
+    <meta name="twitter:site" content="@Ciel__dev"/>
+    <meta name="twitter:creator" content="@Ciel__dev"/>
     <meta name="twitter:title" content="Ciel" />
-    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「Cassiopeia」のときも。高校生。Webエンジニア。Androidアプリケーション開発者。" />
+    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。高校生。Webエンジニア。Androidアプリケーション開発者。" />
     <meta name="twitter:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
