--- a/error/402.html
+++ b/error/402.html
@@ -5,9 +5,9 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact - Ciel</title>
-    <meta name="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「Chr0noStqs1a」のときも。連絡先情報。" />
-    <link rel="canonical" href="https://cieldev/contact.html" />
+    <title>Unauthorized - Ciel</title>
+    <meta name="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「Cassiopeia」や「シエル」のときも。Unauthorized" />
+    <link rel="canonical" href="https://cieldev.net" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="static/icons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="static/icons/favicon-32x32.png" />
@@ -20,22 +20,22 @@
     <meta name="theme-color" content="#ffffff" />
 
 
-    <meta itemprop="name" content="Contact - Ciel" />
-    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。連絡先情報。" />
+    <meta itemprop="name" content="Unauthorized - Ciel" />
+    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「Cassiopeia」や「シエル」のときも。Unauthorized" />
     <meta itemprop="image" content="https://cieldev.net/static/icons/icon.png" />
 
-    <meta property="og:url" content="https://cieldev.net/contact.html" />
+    <meta property="og:url" content="https://cieldev.net" />
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Ciel" />
-    <meta property="og:title" content="Contact - Ciel" />
-    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。連絡先情報。" />
+    <meta property="og:title" content="Unauthorized - Ciel" />
+    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「Cassiopeia」や「シエル」のときも。Unauthorized" />
     <meta property="og:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@Ciel__dev" />
-    <meta name="twitter:creator" content="@Ciel__dev" />
-    <meta name="twitter:title" content="Contact - Ciel" />
-    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。連絡先情報。" />
+    <meta name="twitter:site" content="@cassiopeia_ciel" />
+    <meta name="twitter:creator" content="@cassiopeia_ciel />
+    <meta name="twitter:title" content="Unauthorized - Ciel" />
+    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「Cassiopeia」や「シエル」のときも。Unauthorized" />
     <meta name="twitter:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -44,8 +44,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/yakuhanjp@3.4.1/dist/css/yakuhanmp-noto.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
-    <link rel="stylesheet" href="styles/global.css" />
-    <link rel="stylesheet" href="styles/contact.css" />
+    <link rel="stylesheet" href="https://cieldev.net/styles/global.css" />
 </head>
 
 <body>
@@ -60,17 +59,17 @@
                     </h1>
                 </li>
                 <li class="global-header__item">
-                    <a href="./about" class="global-header__link">
+                    <a href="https://cieldev.net//about" class="global-header__link">
                         About
                     </a>
                 </li>
                 <li class="global-header__item">
-                    <a href="./works" class="global-header__link">
+                    <a href="https://cieldev.net//works" class="global-header__link">
                         Works
                     </a>
                 </li>
                 <li class="global-header__item">
-                    <a href="./contact" class="global-header__link">
+                    <a href="https://cieldev.net//contact" class="global-header__link">
                         Contact
                     </a>
                 </li>
@@ -81,24 +80,19 @@
         <section class="common-section">
             <header class="common-section__header">
                 <h2 class="common-section__title">
-                    Contact
+                    401
                 </h2>
             </header>
             <div class="common-section__body">
-                <p class="common-section__paragraph common-section__paragraph--mail">
-                    contact&#64;cieldev.net
-                </p>
-            </div>
-            <div class="common-section__body">
                 <p class="common-section__paragraph">
-                    土/日/祝日定休。<br />
-                    他、年末年始など一般的な連休の際に適宜お休みをいただきます。
+                    Unauthorized<br>
+                    このページにアクセスするにはユーザー名とパスワードが必要です。
                 </p>
             </div>
         </section>
     </main>
     <footer class="global-footer">
-        © 2022 Ciel
+        © 2021 Ciel (Cassiopeia)
     </footer>
 </body>
 
