--- a/about.html
+++ b/about.html
@@ -90,10 +90,15 @@
                     「 Ciel 」と申します。
                 </p>
                 <p class="common-section__paragraph">
-                    「 Chr0noStqs1a 」としても活動。読みは「シエル」もしくは「クロノスタシア」。a.k.a. Yuduki Sorane.
+                    読み方は「しえる」。a.k.a. Kanato Momose
+                </p><p class="common-section__paragraph">
+                    男性、北海道在住、ロマンティックアセクシャル
                 </p>
                 <p class="common-section__paragraph">
-                    高校生。Web エンジニア。Androidアプリ開発者。
+                    すべての人にすべてのデバイスで最上級のUI/UXアプリケーション開発が目標。
+                </p>
+                <p class="common-section__paragraph">
+                    WebデザインやWeb開発、アプリケーション開発などを勉強中
                 </p>
                 <p class="common-section__paragraph">
                     座右の銘は「自分を救うは自分のみ、自分を決めるは自分のみ」「ただの私による、ただ私だけの人生」。
@@ -181,7 +186,7 @@
                     <dd class="bio-list__year-body">
                         <dl class="bio-list__year-list">
                             <dt class="bio-list__month">
-                                2
+                                6
                             </dt>
                             <dd class="bio-list__month-body">
                                 <ul class="bio-list__item-list">
@@ -203,31 +208,14 @@
                             <dd class="bio-list__month-body">
                                 <ul class="bio-list__item-list">
                                     <li class="bio-list__item">
-                                        このへんから「 Cassiopeia 」と名乗り始める
+                                        Discordの利用開始(現在とこのアカウントは一切無関係)
                                     </li>
                                 </ul>
                             </dd>
                         </dl>
                     </dd>
                     <dt class="bio-list__year">
-                        2019
-                    </dt>
-                    <dd class="bio-list__year-body">
-                        <dl class="bio-list__year-list">
-                            <dt class="bio-list__month">
-                                5
-                            </dt>
-                            <dd class="bio-list__month-body">
-                                <ul class="bio-list__item-list">
-                                    <li class="bio-list__item">
-                                        Discord上でギター奏者として活動
-                                    </li>
-                                </ul>
-                            </dd>
-                        </dl>
-                    </dd>
-                    <dt class="bio-list__year">
-                        2020
+                        2022
                     </dt>
                     <dd class="bio-list__year-body">
                         <dl class="bio-list__year-list">
@@ -237,33 +225,12 @@
                             <dd class="bio-list__month-body">
                                 <ul class="bio-list__item-list">
                                     <li class="bio-list__item">
-                                        趣味としてプログラミングを始める
-                                    </li>
-                                </ul>
-                            </dd>
-                            <dt class="bio-list__month">
-                                5
-                            </dt>
-                            <dd class="bio-list__month-body">
-                                <ul class="bio-list__item-list">
-                                    <li class="bio-list__item">
-                                        「 Who is the 」プロジェクト企画に管理者として参加
-                                    </li>
-                                </ul>
-                            </dd>
-                            <dt class="bio-list__month">
-                                7
-                            </dt>
-                            <dd class="bio-list__month-body">
-                                <ul class="bio-list__item-list">
-                                    <li class="bio-list__item">
-                                        「 Who is the 」プロジェクト管理者を辞任
+                                        釧路工業高等専門学校へ進学
                                     </li>
                                 </ul>
                             </dd>
                         </dl>
                     </dd>
-
                 </dl>
             </div>
         </section>
@@ -271,6 +238,9 @@
     <footer class="global-footer">
         © 2022 Ciel
     </footer>
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+        data-cf-beacon='{"token": "5185cde862e54310860e29abb88fa11e"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
