--- a/contact.html
+++ b/contact.html
@@ -100,6 +100,9 @@
     <footer class="global-footer">
         © 2022 Ciel
     </footer>
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+        data-cf-beacon='{"token": "5185cde862e54310860e29abb88fa11e"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
