--- a/works.html
+++ b/works.html
@@ -1869,6 +1869,10 @@
     <script>
         new LuminousGallery(document.querySelectorAll('.works-list__image-link'));
     </script>
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+        data-cf-beacon='{"token": "5185cde862e54310860e29abb88fa11e"}'></script>
+    <!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
