--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                     「 Ciel 」と申します。
                 </p>
                 <p class="common-section__paragraph">
-                    読み方は「しえる」。a.k.a. Kanato Momose
+                    読み方は「しえる」。a.k.a. Saito Kanade
                 </p><p class="common-section__paragraph">
                     男性、北海道在住、ロマンティックアセクシャル
                 </p>
