--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About - Ciel</title>
-    <meta name="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「Chr0noStqs1a」のときも。簡単なプロフィールと各種リンク, 経歴。" />
+    <meta name="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。簡単なプロフィールと各種リンク, 経歴。" />
     <link rel="canonical" href="https://cieldev.net/about.html" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="static/icons/apple-touch-icon.png" />
@@ -21,21 +21,21 @@
 
 
     <meta itemprop="name" content="About - Ciel" />
-    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。簡単なプロフィールと各種リンク, 経歴。" />
+    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。簡単なプロフィールと各種リンク, 経歴。" />
     <meta itemprop="image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta property="og:url" content="https://cieldev.net/about.html" />
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Ciel" />
     <meta property="og:title" content="About - Ciel" />
-    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。簡単なプロフィールと各種リンク, 経歴。" />
+    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。簡単なプロフィールと各種リンク, 経歴。" />
     <meta property="og:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@Ciel__dev" />
     <meta name="twitter:creator" content="@Ciel__dev" />
     <meta name="twitter:title" content="About - Ciel" />
-    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。簡単なプロフィールと各種リンク, 経歴。" />
+    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。簡単なプロフィールと各種リンク, 経歴。" />
     <meta name="twitter:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -47,6 +47,17 @@
     <link rel="stylesheet" href="styles/global.css" />
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Shippori+Mincho&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/about.css" />
+
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DC0TET0HZS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DC0TET0HZS');
+    </script>
 </head>
 
 <body>
