--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ciel</title>
-    <meta name="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「Cassiopeia」のときも。高校生。Webエンジニア。Androidアプリケーション開発者。" />
+    <meta name="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。高校生。Webエンジニア。Androidアプリケーション開発者。" />
     <link rel="canonical" href="https://cieldev.net" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="static/icons/apple-touch-icon.png" />
@@ -21,21 +21,21 @@
 
 
     <meta itemprop="name" content="Ciel" />
-    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。高校生。Webエンジニア。Androidアプリケーション開発者。" />
+    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。高校生。Webエンジニア。Androidアプリケーション開発者。" />
     <meta itemprop="image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta property="og:url" content="https://cieldev.net" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Ciel" />
     <meta property="og:title" content="Ciel" />
-    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。高校生。Webエンジニア。Androidアプリケーション開発者。" />
+    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。高校生。Webエンジニア。Androidアプリケーション開発者。" />
     <meta property="og:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@Ciel__dev"/>
     <meta name="twitter:creator" content="@Ciel__dev"/>
     <meta name="twitter:title" content="Ciel" />
-    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。高校生。Webエンジニア。Androidアプリケーション開発者。" />
+    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。高校生。Webエンジニア。Androidアプリケーション開発者。" />
     <meta name="twitter:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -46,6 +46,16 @@
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/index.css" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DC0TET0HZS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DC0TET0HZS');
+    </script>
 </head>
 
 <body>
