--- a/works.html
+++ b/works.html
@@ -21,21 +21,21 @@
 
 
     <meta itemprop="name" content="Works - Ciel" />
-    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。お仕事や成果物などのざっくりリスト。掲載可能なもののみ。" />
+    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。お仕事や成果物などのざっくりリスト。掲載可能なもののみ。" />
     <meta itemprop="image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta property="og:url" content="https://cieldev.net/works.html" />
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Ciel" />
     <meta property="og:title" content="Works - Ciel" />
-    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。お仕事や成果物などのざっくりリスト。掲載可能なもののみ。" />
+    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。お仕事や成果物などのざっくりリスト。掲載可能なもののみ。" />
     <meta property="og:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@Ciel__dev"/>
     <meta name="twitter:creator" content="@Ciel__dev"/>
     <meta name="twitter:title" content="Works - Ciel" />
-    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「シエル」や「しえる。」のときも。お仕事や成果物などのざっくりリスト。掲載可能なもののみ。" />
+    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。お仕事や成果物などのざっくりリスト。掲載可能なもののみ。" />
     <meta name="twitter:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -47,6 +47,16 @@
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/works.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/luminous-lightbox@2.3.3/dist/luminous-basic.min.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DC0TET0HZS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DC0TET0HZS');
+    </script>
 </head>
 
 <body>
