--- a/error/500.html
+++ b/error/500.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Internal Server Error - Ciel</title>
-    <meta name="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「Cassiopeia」や「シエル」のときも。Internal Server Error" />
+    <meta name="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。Internal Server Error" />
     <link rel="canonical" href="https://cieldev.net" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="static/icons/apple-touch-icon.png" />
@@ -21,21 +21,21 @@
 
 
     <meta itemprop="name" content="Internal Server Error - Ciel" />
-    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「Cassiopeia」や「シエル」のときも。Internal Server Error" />
+    <meta itemprop="description" content="Ciel&#39;s Profile Site.「Ciel」と申します。Internal Server Error" />
     <meta itemprop="image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta property="og:url" content="https://cieldev.net" />
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Ciel" />
     <meta property="og:title" content="Internal Server Error - Ciel" />
-    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「Cassiopeia」や「シエル」のときも。Internal Server Error" />
+    <meta property="og:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。Internal Server Error" />
     <meta property="og:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@cassiopeia_ciel" />
     <meta name="twitter:creator" content="@cassiopeia_ciel />
     <meta name="twitter:title" content="Internal Server Error - Ciel" />
-    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。「Cassiopeia」や「シエル」のときも。Page Not Found" />
+    <meta name="twitter:description" content="Ciel&#39;s Profile Site.「Ciel」と申します。Internal Server Error" />
     <meta name="twitter:image" content="https://cieldev.net/static/icons/icon.png" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -45,6 +45,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/yakuhanjp@3.4.1/dist/css/yakuhanmp-noto.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="https://cieldev.net/styles/global.css" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DC0TET0HZS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DC0TET0HZS');
+    </script>
 </head>
 
 <body>
