--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                     「 Ciel 」と申します。
                 </p>
                 <p class="common-section__paragraph">
-                    読み方は「しえる」。a.k.a. Saito Kanade
+                    読み方は「しえる」。a.k.a. Shinonome Sorane
                 </p><p class="common-section__paragraph">
                     男性、北海道在住、ロマンティックアセクシャル
                 </p>
